appended bigger paragraph to div #5

--- a/new_index.html
+++ b/new_index.html
@@ -66,6 +66,7 @@
         </div>
         <div id="orange" class="sub-div">
           5<p>There are more things in this orange flex-item!</p>
+          <p>I'm adding another paragraph in this div to make it even bigger!</p>
         </div>
       </div>
     </main>
